src/test/resources/samples/invalid/missing-geometry.bdoc
<?xml version="1.0" encoding="UTF-8"?>
<document xmlns="urn:bdoc:v0.1" id="doc-bad-4" title="Missing Geometry" documentType="book">
    <pages>
        <page id="page-1" index="1" width="595.0" height="842.0">
            <layers>
                <layer id="layer-text" name="Text" role="text" visible="true" zIndex="1"/>
            </layers>
            <objects>
                <textFrame id="text-1" layerRef="layer-text" storyRef="story-1"/>
            </objects>
        </page>
    </pages>
    <stories>
        <story id="story-1">
            <paragraph role="body">У textFrame отсутствует geometry.</paragraph>
        </story>
    </stories>
</document>